--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,19 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.3
 aiosignal==1.4.0
+annotated-doc==0.0.4
 annotated-types==0.7.0
+anyio==4.12.1
 attrs==25.4.0
 bitarray==3.8.0
 cached-property==2.0.1
 certifi==2026.1.4
 charset-normalizer==3.4.4
 ckzg==2.1.5
+click==8.3.1
 cytoolz==1.1.0
+dnspython==2.8.0
+email-validator==2.3.0
 eth-account==0.13.7
 eth-bloom==3.1.0
 eth-hash==0.7.1
@@ -19,10 +24,22 @@ eth-tester==0.13.0b1
 eth-typing==5.2.1
 eth-utils==5.3.1
 eth_abi==5.2.0
+fastapi==0.128.0
+fastapi-cli==0.0.20
+fastapi-cloud-cli==0.10.1
+fastar==0.8.0
 frozenlist==1.8.0
+h11==0.16.0
 hexbytes==1.3.1
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.28.1
 idna==3.11
+Jinja2==3.1.6
 lru-dict==1.4.1
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+mdurl==0.1.2
 multidict==6.7.0
 packaging==25.0
 parsimonious==0.10.0
@@ -32,20 +49,36 @@ py-evm==0.12.1b1
 py-solc-x==2.0.5
 pycryptodome==3.23.0
 pydantic==2.12.5
+pydantic-extra-types==2.11.0
+pydantic-settings==2.12.0
 pydantic_core==2.41.5
+Pygments==2.19.2
+python-dotenv==1.2.1
+python-multipart==0.0.21
 pyunormalize==17.0.0
+PyYAML==6.0.3
 regex==2025.11.3
 requests==2.32.5
+rich==14.2.0
+rich-toolkit==0.17.1
+rignore==0.7.6
 rlp==4.1.0
 safe-pysha3==1.0.5
 semantic-version==2.10.0
+sentry-sdk==2.49.0
+shellingham==1.5.4
 sortedcontainers==2.4.0
+starlette==0.50.0
 toolz==1.1.0
 trie==3.1.0
+typer==0.21.1
 types-requests==2.32.4.20260107
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.6.3
+uvicorn==0.40.0
+uvloop==0.22.1
+watchfiles==1.1.1
 web3==7.14.0
 websockets==15.0.1
 yarl==1.22.0
