--- a/backend/deployment_config.json
+++ b/backend/deployment_config.json
@@ -1,1 +1,1 @@
-{"contract_address": "0x0bA8b250d6992cF426c08f1e91701EAaFB808F95", "network": "sepolia"}
+{"contract_address": "0xAD73745Af022B39C5697C7272632D5Caf2C9C153", "network": "ganache"}
