--- a/backend/deployment_config.json
+++ b/backend/deployment_config.json
@@ -1,1 +1,4 @@
-{"contract_address": "0xAD73745Af022B39C5697C7272632D5Caf2C9C153", "network": "ganache"}
+{
+  "contract_address": "0x0b276D8e37156B850ea619201049517cd57a3231",
+  "network": "sepolia"
+}
