--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,130 +1,12 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.11.18
-aiosignal==1.3.2
-annotated-doc==0.0.4
-annotated-types==0.7.0
-anyio==4.12.1
-asttokens==2.4.1
-asyncpg==0.31.0
-attrs==25.3.0
-bitarray==3.4.2
-black==25.1.0
-cached-property==2.0.1
-cbor2==5.6.5
-cchecksum==0.2.6
-certifi==2025.4.26
-charset-normalizer==3.4.2
-ckzg==2.1.1
-click==8.2.1
-cytoolz==1.0.1
-dataclassy==0.11.1
-dnspython==2.8.0
-eip712==0.2.11
-email-validator==2.3.0
-eth-account==0.13.7
-eth-bloom==3.1.0
-eth-brownie==1.21.0
-eth-event==1.3.0
-eth-hash==0.7.1
-eth-keyfile==0.8.1
-eth-keys==0.7.0
-eth-rlp==2.2.0
-eth-tester==0.13.0b1
-eth-typing==4.4.0
-eth-utils==4.1.1
-eth_abi==5.2.0
-execnet==2.1.1
-fastapi==0.128.0
-fastapi-cli==0.0.20
-fastapi-cloud-cli==0.10.1
-fastar==0.8.0
-frozenlist==1.6.0
-greenlet==3.3.1
-h11==0.16.0
-hexbytes==1.3.1
-httpcore==1.0.9
-httptools==0.7.1
-httpx==0.28.1
-hypothesis==6.27.3
-idna==3.10
-importlib_metadata==8.7.0
-iniconfig==2.1.0
-Jinja2==3.1.6
-jsonschema==4.23.0
-jsonschema-specifications==2025.4.1
-lark==1.2.2
-lazy-object-proxy==1.11.0
-lru-dict==1.3.0
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
-mdurl==0.1.2
-multidict==6.4.4
-mypy_extensions==1.1.0
-packaging==23.2
-parsimonious==0.10.0
-pathspec==0.12.1
-platformdirs==4.3.8
-pluggy==1.6.0
-prompt_toolkit==3.0.51
-propcache==0.3.1
-protobuf==6.31.0
-psutil==5.9.8
-psycopg2-binary==2.9.11
-py==1.11.0
-py-ecc==8.0.0
-py-evm==0.12.1b1
-py-solc-ast==1.2.10
-py-solc-x==1.1.1
-pycryptodome==3.23.0
-pydantic==2.11.5
-pydantic-extra-types==2.11.0
-pydantic-settings==2.12.0
-pydantic_core==2.33.2
-Pygments==2.19.1
-pygments-lexer-solidity==0.7.0
-PyJWT==2.10.1
-pytest==6.2.5
-pytest-forked==1.6.0
-pytest-xdist==1.34.0
-python-dotenv==0.16.0
-python-multipart==0.0.21
-pyunormalize==16.0.0
-PyYAML==6.0.2
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.3
-rich==14.2.0
-rich-toolkit==0.17.1
-rignore==0.7.6
-rlp==4.1.0
-rpds-py==0.25.1
-safe-pysha3==1.0.5
-semantic-version==2.10.0
-sentry-sdk==2.49.0
-setuptools==80.10.1
-shellingham==1.5.4
-six==1.17.0
-sortedcontainers==2.4.0
-SQLAlchemy==2.0.46
-starlette==0.50.0
-toml==0.10.2
-toolz==1.0.0
-tqdm==4.67.1
-trie==3.1.0
-typer==0.21.1
-types-requests==2.32.4.20260107
-typing-inspection==0.4.1
-typing_extensions==4.13.2
-urllib3==2.4.0
-uvicorn==0.40.0
-uvloop==0.22.1
-vvm==0.2.1
-vyper==0.4.1
-watchfiles==1.1.1
-wcwidth==0.2.13
-web3==6.11.0
-websockets==15.0.1
-wheel==0.45.1
-wrapt==1.17.2
-yarl==1.20.0
-zipp==3.21.0
+fastapi
+uvicorn
+sqlalchemy
+asyncpg
+web3
+python-dotenv
+pydantic
+pydantic-settings
+pyjwt
+eth-account
+python-multipart
+websockets
